Fix: increase z-index of backdrop and modal to re-enable backdrop click

--- a/styles/BackDrop.module.scss
+++ b/styles/BackDrop.module.scss
@@ -5,4 +5,5 @@
     width: 100%;
     height: 100%;
     background-color: rgba($color: #000000, $alpha: .7);
+    z-index:150;
 }
