--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -10,7 +10,7 @@
     border-radius: 5px;
     height: auto;
     width: auto;
-    z-index: 100;
+    z-index: 200;
     animation: move-modal .8s  forwards;
 }
 
